--- a/animals.html
+++ b/animals.html
@@ -2,13 +2,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Our Animals | My Cool Website</title>
+    <title>Our Animals | My Amazing Website</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous" />
-    <link rel="stylesheet" href="custom.css" />
+    <link rel="stylesheet" href="my-site.css" />
   </head>
   <body>
     <div class="my-bg-photo bg-secondary text-white py-5 text-center shadow">
-      <h1 class="display-4">My Cool Website</h1>
+      <h1 class="display-4">My Amazing Website</h1>
       <p class="lead mb-0">A super interesting place on the web.</p>
     </div>
 
@@ -45,7 +45,7 @@
 
     <footer class="border-top mt-5 py-4 text-center text-muted small">
       <p>&copy; 2020 My Site</p>
-      <p>yes i made this</p>
+      <p>(yes i made this)</p>
     </footer>
 
     <!-- JavaScript and dependencies -->
