--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="my-bg-photo bg-secondary text-white py-5 text-center shadow">
-      <h1 class="display-4">My Amaizing Website</h1>
+      <h1 class="display-4">My Amazing Website</h1>
       <p class="lead mb-0">A super interesting place on the web.</p>
     </div>
 
@@ -30,7 +30,7 @@
       <div class="row">
         <div class="col-md-7">
           <h1>Hey, welcome!</h1>
-          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ratione inventore, quae modi voluptatem odit labore molestias cupiditate voluptas velit recusandae nisi neque, odio ullam ea libero quo sed praesentium.</p>
+          <p class="lead"> (This is just random text dont bother to read it) Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ratione inventore, quae modi voluptatem odit labore molestias cupiditate voluptas velit recusandae nisi neque, odio ullam ea libero quo sed praesentium.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid dolorum autem fuga temporibus architecto, numquam repellendus commodi minus excepturi. Voluptatum minima impedit inventore. Ipsum, voluptatem veritatis! Odio quod quaerat atque.</p>
           <a href="about.html" class="btn btn-primary btn-lg">Read Our Story</a>
         </div>
@@ -42,7 +42,7 @@
 
     <footer class="border-top mt-5 py-4 text-center text-muted small">
       <p>&copy; 2020 My Site</p>
-      <p>yes i made this</p>
+      <p>(yes i made this)</p>
     </footer>
 
     <!-- JavaScript and dependencies -->
